# sterm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/sterm/: command_handler.hpp  config.hpp  output_manager.hpp  terminal.hpp  version.hpp
src/: command_handler.cpp  config.cpp  main.cpp  output_manager.cpp  terminal.cpp
